--- a/post.html
+++ b/post.html
@@ -25,42 +25,24 @@
 
     <div class="template-conteudo">
         <head>
-			<link rel="stylesheet" href="Content/Home/Home.css" />
 			<link rel="stylesheet" href="Content/Post/Post.css" />
-			<link rel="stylesheet" href="Content/SineWave/SineWave.css" />
 		</head>
 
-		<div class="conteudo-container">
-
-			<div id="conteudo-esquerda-container" class="conteudo-esquerda-container"></div>
-
-			<div class="conteudo-direita-container">
-				<div class="direita-item-container">
-					<div class="fw fh dp02">
-						<div class="olho-container">
-							<img id="olho-img" class="olho svg-filtro-purple-200 olho-shake-slow" src="Content/images/olhos/olho-6.svg">
-						</div>
-						<svg id="sinewave-svg-1">
-							<path id="sinewave-svg-1-path" d="M10,10 L50,100 L90,50"></path>
-						</svg>
-						<svg id="sinewave-svg-2">
-							<path id="sinewave-svg-2-path" d="M10,10 L50,100 L90,50"></path>
-						</svg>
-						<svg id="sinewave-svg-3">
-							<path id="sinewave-svg-3-path" d="M10,10 L50,100 L90,50"></path>
-						</svg>
-					</div>
+		<div class="conteudo-post-container">
+			<div class="fw dp02">
+				<div id="post-id-1" class="post-container high-white fw fh">
+					<div id="post-titulo" class="post-titulo kumbh-sans"></div>
+					<div id="post-conteudo" class="post-conteudo open-sans"></div>
 				</div>
 			</div>
-
 		</div>
-		<script src="Scripts/SineWave/SineWave.js"></script>
-		<script src="Scripts/Home/Home.js"></script>
+		
+		<script src="Scripts/Post/Post.js"></script>
     </div>
 
     <footer class="footer text-muted dp01 medium-white">
         <div class="container">
-            &copy; 2021 - Mar de Karma
+            &copy; 2021 - Mar de Karmas
         </div>
     </footer>
     <script src="Scripts/Bootstrap/bootstrap.bundle.min.js"></script>
