--- a/post.html
+++ b/post.html
@@ -28,11 +28,13 @@
 			<link rel="stylesheet" href="Content/Post/Post.css" />
 		</head>
 
-		<div class="conteudo-post-container">
-			<div class="fw dp02">
-				<div id="post-id-1" class="post-container high-white fw fh">
-					<div id="post-titulo" class="post-titulo kumbh-sans"></div>
-					<div id="post-conteudo" class="post-conteudo open-sans"></div>
+		<div class="conteudo-container">
+			<div class="conteudo-post-container">
+				<div class="fw dp02">
+					<div id="post-id-1" class="post-container high-white fw fh">
+						<div id="post-titulo" class="post-titulo kumbh-sans"></div>
+						<div id="post-conteudo" class="post-conteudo open-sans"></div>
+					</div>
 				</div>
 			</div>
 		</div>
