--- a/post.html
+++ b/post.html
@@ -44,7 +44,7 @@
 
     <footer class="footer text-muted dp01 medium-white">
         <div class="container">
-            &copy; 2021 - Mar de Karmas
+            &copy; 2021 - Mar de Karma
         </div>
     </footer>
     <script src="Scripts/Bootstrap/bootstrap.bundle.min.js"></script>
